public class AgentFacturation extends Utilisateur {
    public void gererContrats() {
        // Gestion des contrats.
    }

    public void publierFactures() {
        // Publication des factures.
    }
}
